--- a/src/Main/Style/main.module.css
+++ b/src/Main/Style/main.module.css
@@ -1,7 +1,7 @@
 .info_box {
   border: 1px solid white;
   width: 320px;
-  margin: 200px 0 0 0;
+  margin: 100px 0 0 0;
   z-index: 0;
   text-align: center;
   position: relative;
@@ -169,4 +169,54 @@
 
 .hidden {
   display: none;
+}
+
+@media (min-width: 1500px) {
+  .category_box {
+    max-width: 380px;
+    width: 100%;
+    height: 100vh;
+    margin: 90px 0 0 0;
+  }
+}
+
+@media (max-width: 1500px) {
+  .category_box {
+    display: none;
+  }
+
+  .under_category_box {
+    display: none;
+  }
+}
+
+@media (min-width: 1000px) {
+  .container {
+    display: flex;
+  }
+
+  .account_box {
+    position: fixed;
+    margin: 80px 0 0 30px;
+    z-index: 1000;
+  }
+
+  .box {
+    width: 100%;
+    margin: 0 0 0 380px;
+  }
+}
+
+@media (max-width: 1000px) {
+  .account_box {
+    display: none;
+  }
+
+  .category_box {
+    display: none;
+  }
+
+  .under_category_box {
+    display: none;
+  }
 }
