--- a/src/Main/Style/main.module.css
+++ b/src/Main/Style/main.module.css
@@ -1,174 +1,69 @@
-.info_box {
-  border: 1px solid white;
-  width: 320px;
-  margin: 100px 0 0 0;
-  z-index: 0;
-  text-align: center;
+.outer_post_box {
+  flex-direction: column;
   position: relative;
-}
-
-/*프로필사진*/
-.profile_wrapper {
-  z-index: 10;
-
-  > button {
-    border: none;
-    background-color: white;
-    margin: 10px 0 0 0;
-    color: skyblue;
-    font-weight: 500;
-  }
-}
-
-.profile_image_div {
-  overflow: hidden;
-  width: 170px;
-  height: 170px;
-  border-radius: 70%;
-  margin: 0 auto;
-
-  > img {
-    width: 100%;
-    height: 100%;
-    object-fit: cover;
-  }
-}
-
-/*계정 정보*/
-.info_content_box {
-  margin: 35px 0;
-}
-
-.name {
-  font-size: 28px;
-  font-weight: 700;
-  margin: 0 0 10px 0;
-}
-
-.user_description {
-  font-size: 15px;
-}
-
-/*표*/
-.table {
-  margin: 30px 0;
-}
-
-.table_div {
-  display: flex;
-  width: 400px;
+  width: 100%;
   margin: 0 auto;
 }
 
-.table_title_div {
-  width: 100px;
-  display: flex;
-  margin: 0 30px 0 20px;
-  justify-content: center;
-
-  > p {
-    font-size: 15px;
-    margin: auto 0;
-    font-weight: 600;
-  }
+.null_post {
+  margin: 0 0 30px 30px;
+  font-size: 17px;
 }
 
-/*소셜 계정*/
-.social_table {
-  > p {
-    font-size: 14px;
-    color: gray;
-  }
+.null_post2 {
+  margin: 30px 0 10px 0;
+  font-size: 17px;
 }
 
-.social_account_div {
-  display: flex;
+.pinned_box {
+  border: 0.1px solid black;
+  border-radius: 10px;
+  margin: 80px 0 0 0;
+  padding: 20px 0 0 0;
 }
 
-.social_icon_div {
-  width: 45px;
-  display: flex;
-  height: 30px;
-
-  > img {
-    height: 20px;
-    margin: auto 0;
-  }
+.unpinned_box {
+  border: 0.1px solid black;
+  border-radius: 10px;
+  margin: 40px 0 0 0;
+  padding: 20px 0 0 0;
 }
 
-.social_id_div {
-  width: 200px;
-  display: flex;
-  margin: 0 0 0 -10px;
-}
-
-.social {
-  font-size: 14px;
-  margin: auto 0;
-  color: black;
-  transition: 0.1s ease-out;
-}
-
-.social:hover {
-  color: skyblue;
-  transition: 0.1s ease-out;
-}
-
-.null_social {
-  font-size: 13px;
-  color: gray;
-  margin: auto 0;
-}
-
-.email_div {
-  > p {
-    font-size: 14px;
-    margin: auto 0;
-  }
-}
-
-.author_user_info_box {
-  background-color: white;
-  padding: 0 0 80px 0;
-  width: 300px;
-
-  > div > hr {
-    width: 320px;
-    margin: 20px 0;
-  }
-}
-
-.user_info_box {
-  > div > hr {
-    width: 320px;
-    margin: 20px 0;
-  }
-}
-/*링크*/
-.link_table_div {
-  display: flex;
+.btn {
   cursor: pointer;
+  width: 60px;
+  margin: 20px 0 30px 30px;
+}
 
-  img {
-    height: 17px;
-    margin: auto 15px auto 0;
+.box {
+  padding: 20px;
+}
+
+.category {
+  border: 0.1px solid black;
+  border-radius: 8px;
+  margin: 10px 30px 0 0;
+  padding: 30px 0 30px 30px;
+
+  > p {
+    font-size: 20px;
+    font-weight: 500;
+    margin: 10px 0 20px 0;
   }
-}
 
-.personal_link {
-  font-size: 14px;
-  margin: 3px 0;
-  color: black;
-  transition: 0.1s ease-out;
-}
+  > div {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: flex-start;
+    gap: 13px;
+  }
 
-.personal_link:hover {
-  color: skyblue;
-  transition: 0.1s ease-out;
-}
-
-.hidden {
-  display: none;
+  > div > p {
+    border: 0.1px solid black;
+    border-radius: 8px;
+    padding: 10px;
+    cursor: pointer;
+  }
 }
 
 @media (min-width: 1500px) {
@@ -184,10 +79,6 @@
   .category_box {
     display: none;
   }
-
-  .under_category_box {
-    display: none;
-  }
 }
 
 @media (min-width: 1000px) {
@@ -195,7 +86,7 @@
     display: flex;
   }
 
-  .account_box {
+  .accountbox {
     position: fixed;
     margin: 80px 0 0 30px;
     z-index: 1000;
@@ -203,7 +94,7 @@
 
   .box {
     width: 100%;
-    margin: 0 0 0 380px;
+    margin: 0 0 0 80px;
   }
 }
 
@@ -213,10 +104,6 @@
   }
 
   .category_box {
-    display: none;
-  }
-
-  .under_category_box {
     display: none;
   }
 }
