--- a/src/PostList/Style/postlist.module.css
+++ b/src/PostList/Style/postlist.module.css
@@ -102,3 +102,19 @@
   margin: 30px 0 0 0;
   width: 95%;
 }
+
+@media (min-width: 1500px) {
+  .account_box {
+    position: fixed;
+    margin: 20px 0 0 0;
+    z-index: 1000;
+    top: 0;
+    left: 0;
+  }
+}
+
+@media (max-width: 1500px) {
+  .account_box {
+    display: none;
+  }
+}
