--- a/public/reset.css
+++ b/public/reset.css
@@ -10,8 +10,6 @@ span,
 applet,
 object,
 iframe,
-h1,
-h2,
 h3,
 h4,
 h5,
@@ -33,7 +31,6 @@ img,
 ins,
 kbd,
 q,
-s,
 samp,
 small,
 strike,
@@ -42,16 +39,11 @@ sub,
 sup,
 tt,
 var,
-b,
-u,
 i,
 center,
 dl,
 dt,
 dd,
-ol,
-ul,
-li,
 fieldset,
 form,
 label,
@@ -110,9 +102,6 @@ body {
   line-height: 1;
 }
 ol,
-ul {
-  list-style: none;
-}
 blockquote,
 q {
   quotes: none;
@@ -127,4 +116,88 @@ q:after {
 table {
   border-collapse: collapse;
   border-spacing: 0;
+}
+
+b {
+  font-weight: 900;
+}
+
+i {
+  font-style: italic;
+}
+
+h1 {
+  font-weight: bold;
+  font-size: 30px;
+  line-height: 35px;
+  margin: 20px 0 10px 0;
+}
+
+h2 {
+  font-weight: bold;
+  font-size: 20px;
+  line-height: 25px;
+  margin: 20px 0 20px 0;
+}
+
+u {
+  text-decoration: underline;
+}
+
+s {
+  text-decoration: line-through;
+}
+
+blockquote {
+  margin: 20px 0;
+  padding: 10px 20px;
+  background: #f9f9f9;
+  border-left: 10px solid #ccc;
+}
+
+a {
+  color: blue;
+  text-decoration: underline;
+}
+
+ol {
+  margin: 0 0 10px 20px;
+  padding: 0;
+  list-style-type: decimal;
+}
+
+ol li {
+  margin: 10px 0;
+}
+
+ul {
+  margin: 0 0 10px 20px;
+  padding: 0;
+  list-style-type: disc;
+}
+
+ul li {
+  margin: 10px 0 0 0;
+}
+
+ul[data-checked="false"] {
+  list-style-type: none;
+  margin-left: 0px;
+}
+
+ul[data-checked="false"] li::before {
+  content: "\2713";
+  margin-right: 10px;
+  color: gray;
+}
+
+ul[data-checked="true"] {
+  list-style-type: none;
+  margin-left: 0px;
+}
+
+ul[data-checked="true"] li::before {
+  content: "\2713";
+  margin-right: 10px;
+  color: red;
 }
