--- a/src/Post/Style/post.module.css
+++ b/src/Post/Style/post.module.css
@@ -185,7 +185,7 @@
 @media (min-width: 1500px) {
   .account_box {
     position: fixed;
-    margin: 80px 0 0 30px;
+    margin: 0 0 0 30px;
     z-index: 1000;
     top: 0;
     left: 0;
