--- a/public/reset.css
+++ b/public/reset.css
@@ -23,7 +23,6 @@ acronym,
 address,
 big,
 cite,
-code,
 del,
 dfn,
 em,
@@ -201,4 +200,21 @@ ul[data-checked="true"] li::before {
   content: "\2713";
   margin-right: 10px;
   color: red;
+}
+
+code {
+  border-radius: 5px;
+  padding: 2px 5px 3px 5px;
+  line-height: 20px;
+  font-size: 16px;
+}
+
+.ql-indent-1 {
+  margin-left: 30px;
+}
+.ql-indent-2 {
+  margin-left: 60px;
+}
+.ql-indent-3 {
+  margin-left: 90px;
 }
