--- a/src/Main/Style/main.module.css
+++ b/src/Main/Style/main.module.css
@@ -86,15 +86,15 @@
     display: flex;
   }
 
-  .accountbox {
+  .account_box {
     position: fixed;
-    margin: 80px 0 0 30px;
+    margin: 50px 0 0 0;
     z-index: 1000;
   }
 
   .box {
     width: 100%;
-    margin: 0 0 0 80px;
+    margin: 0 0 0 380px;
   }
 }
 
