--- a/public/reset.css
+++ b/public/reset.css
@@ -1,8 +1,3 @@
-/* http://meyerweb.com/eric/tools/css/reset/ 
-   v2.0 | 20110126
-   License: none (public domain)
-*/
-
 html,
 body,
 div,
@@ -83,7 +78,7 @@ video {
   font-family: sans-serif;
   vertical-align: baseline;
 }
-/* HTML5 display-role reset for older browsers */
+
 article,
 aside,
 details,
@@ -220,4 +215,8 @@ code {
 .ql-indent-3 {
   margin-left: 90px;
   list-style: circle;
+}
+
+.w-md-editor * {
+  font-family: inherit !important;
 }
