--- a/src/Post/styles/post.module.css
+++ b/src/Post/styles/post.module.css
@@ -72,10 +72,18 @@
   flex-wrap: wrap;
   justify-content: start;
 
-  > div {
+  > li {
     margin: 0 10px 10px 0;
     cursor: pointer;
   }
+
+  a {
+    color: inherit;
+    text-decoration: none;
+  }
+
+  list-style-type: none;
+  padding-left: 0;
 }
 
 .contents {
