Design: 버튼 디자인 변경
카테고리 리스트: ul, li 태그 변경 및 아래 방향으로 리스트 방향 전환
포스팅 페이지: 포스팅 버튼 디자인 수정

--- a/src/Utils/styles/component.module.css
+++ b/src/Utils/styles/component.module.css
@@ -93,3 +93,21 @@
     transform: rotate(360deg);
   }
 }
+
+.button {
+  > button {
+    border: 0.5px solid black;
+    border-radius: 8px;
+    padding: 10px 15px;
+    background-color: white;
+    font-size: 15px;
+    cursor: pointer;
+    transition: 0.2s ease;
+  }
+
+  > button:hover {
+    background-color: rgb(242, 242, 242);
+    border-color: rgb(242, 242, 242);
+    transition: 0.2s ease;
+  }
+}
