--- a/src/Main/styles/main.module.css
+++ b/src/Main/styles/main.module.css
@@ -51,18 +51,27 @@
     margin: 10px 0 20px 0;
   }
 
-  > div {
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: flex-start;
-    gap: 13px;
+  > ul > li {
+    cursor: pointer;
+    transition: 0.1s ease-out;
+    list-style-type: none;
+    position: relative;
+    padding-left: 20px;
+    margin-left: -10px;
   }
 
-  > div > p {
-    border: 0.1px solid black;
-    border-radius: 8px;
-    padding: 10px;
-    cursor: pointer;
+  > ul > li::before {
+    content: "▶";
+    position: absolute;
+    left: 0;
+    top: 0;
+    font-size: 10px;
+    color: black;
+  }
+
+  > ul > li:hover {
+    color: skyblue;
+    transition: 0.1s ease-out;
   }
 }
 
