--- a/src/Utils/styles/component.module.css
+++ b/src/Utils/styles/component.module.css
@@ -14,13 +14,13 @@
   justify-content: space-between;
   align-items: center;
   justify-content: center;
-
+  box-shadow: 0 2px 15px 4px rgba(0, 0, 0, 0.1);
   > p {
     font-size: 40px;
     font-weight: bold;
     display: inline;
     text-decoration-line: none;
-    color: white;
+
     cursor: pointer;
     font-family: "Times New Roman", Times, serif;
   }
@@ -41,7 +41,7 @@
   left: 0;
 
   div {
-    border: 2px solid white;
+    border: 2px solid;
     padding: 5px 8px;
     border-radius: 50px;
     margin: 5px 0 0 25px;
@@ -49,7 +49,6 @@
   }
 
   p {
-    color: white;
     font-family: "Times New Roman", Times, serif;
   }
 }
