Design: postlist 디자인 변경
미리보기 텍스트 글자 색 변경
텍스트 노출 글자 수 변경

--- a/src/PostList/styles/postlist.module.css
+++ b/src/PostList/styles/postlist.module.css
@@ -58,9 +58,10 @@
 
 .contents {
   margin: 0 0 10px 0;
-  line-height: 20px;
+  line-height: 25px;
   font-size: 16px;
   max-width: 700px;
+  color: gray;
 }
 
 .more {
