Design: 텍스트 넘침 조정
post list 긴 글 입력시 텍스트 박스에서 넘침 조정

--- a/src/PostList/styles/postlist.module.css
+++ b/src/PostList/styles/postlist.module.css
@@ -62,6 +62,9 @@
   font-size: 16px;
   max-width: 1000px;
   color: gray;
+  word-wrap: break-word;
+  word-break: break-word;
+  overflow-wrap: break-word;
 }
 
 .more {
