--- a/src/Login/styles/login.module.css
+++ b/src/Login/styles/login.module.css
@@ -66,3 +66,10 @@
   cursor: pointer;
   font-size: 15px;
 }
+
+.error {
+  font-size: 11px;
+  color: gray;
+  text-align: right;
+  margin-bottom: -11px;
+}
